####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = yammi
yammi_SOURCES = songentrystring.cpp songentryint.cpp songentrytimestamp.cpp songentry.cpp YammiGuiBase.ui mylistview.cpp preferencesdialog.cpp yammimodel.cpp yammigui.cpp songlistitem.cpp SongInfoDialog.ui songinfo.cpp song.cpp prefs.cpp PreferencesDialogBase.ui mylist.cpp mydatetime.cpp mp3tag.cpp mp3_layer.cpp fuzzsrch.cpp foldermedia.cpp foldergroups.cpp foldercategories.cpp folder.cpp DeleteDialog.ui main.cpp 
SOURCES = songentrystring.cpp songentryint.cpp songentrytimestamp.cpp songentry.cpp mylistview.cpp preferencesdialog.cpp yammimodel.cpp yammigui.cpp songlistitem.cpp songinfo.cpp song.cpp prefs.cpp mylist.cpp mydatetime.cpp mp3tag.cpp mp3_layer.cpp fuzzsrch.cpp foldermedia.cpp foldergroups.cpp foldercategories.cpp folder.cpp main.cpp 
INTERFACES = YammiGuiBase.ui SongInfoDialog.ui PreferencesDialogBase.ui DeleteDialog.ui 
TRANSLATIONS = 
KDE_OPTIONS = qtonly
yammi_LDADD   = -lxmms $(LIB_QT) $(LIBSOCKET)


EXTRA_DIST = main.cpp lo32-app-yammi.png lo16-app-yammi.png filenew.xpm filesave.xpm fileopen.xpm clearPlaylist.xpm DeleteDialog.ui folder.cpp folder.h foldercategories.cpp foldercategories.h foldergroups.cpp foldergroups.h foldermedia.cpp foldermedia.h fuzzsrch.cpp fuzzsrch.h in.xpm mp3_layer.cpp mp3_layer.h mp3tag.cpp mp3tag.h mydatetime.cpp mydatetime.h mylist.cpp mylist.h notin.xpm pause.xpm PreferencesDialogBase.ui prefs.cpp prefs.h skipbackward.xpm skipforward.xpm song.cpp song.h songinfo.cpp songinfo.h SongInfoDialog.ui songlistitem.cpp songlistitem.h yammigui.cpp yammigui.h yammimodel.cpp yammimodel.h preferencesdialog.cpp preferencesdialog.h defaultMiddleClick.xpm defaultDoubleClick.xpm mylistview.cpp mylistview.h YammiGuiBase.ui enqueue.xpm enqueueasnext.xpm playnow.xpm dequeueSong.xpm prelisten.xpm songinfo.xpm stopPrelisten.xpm songentry.cpp songentry.h songentrytimestamp.cpp songentrytimestamp.h songentryint.cpp songentryint.h songentrystring.cpp songentrystring.h 

####### kdevelop will overwrite this part!!! (end)############


# set the include path for X, qt and KDE
INCLUDES= $(all_includes)

yammi_METASOURCES = AUTO

# the library search path. 
yammi_LDFLAGS = $(all_libraries) 

# them while "make clean", use CLEANFILES
DISTCLEANFILES = $(yammi_METASOURCES)

# this is to enable Qt behavoir of am_edit
KDE_OPTIONS = qtonly



