####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = clearPlaylist.xpm defaultControlClick.xpm defaultDoubleClick.xpm defaultMiddleClick.xpm defaultShiftClick.xpm dequeueAll.xpm dequeueSong.xpm enqueue.xpm enqueueasnext.xpm filesave.xpm in.xpm notin.xpm songinfo.xpm stopPrelisten.xpm yammiicon.xpm pause.xpm play.xpm skipbackward.xpm skipforward.xpm stop.xpm playnow.xpm newCategory.xpm toFromPlaylist.xpm some_in.xpm 

####### kdevelop will overwrite this part!!! (end)############
