####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libmp3info.a

INCLUDES = $(all_includes)

libmp3info_a_METASOURCES = AUTO

libmp3info_a_SOURCES = CVBitRate.cpp CMP3Info.cpp CFrameHeader.cpp 
KDE_OPTIONS = qtonly


EXTRA_DIST = CFrameHeader.cpp CFrameHeader.h CMP3Info.cpp CMP3Info.h CVBitRate.cpp CVBitRate.h 

####### kdevelop will overwrite this part!!! (end)############
