####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.html logotp3.png index.sgml 

install-data-local:
	$(mkinstalldirs) $(KDEDIR)/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-1.html $(KDEDIR)/share/doc/HTML/en/yammi/index-1.html
	$(mkinstalldirs) $(KDEDIR)/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-2.html $(KDEDIR)/share/doc/HTML/en/yammi/index-2.html
	$(mkinstalldirs) $(KDEDIR)/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-3.html $(KDEDIR)/share/doc/HTML/en/yammi/index-3.html
	$(mkinstalldirs) $(KDEDIR)/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-4.html $(KDEDIR)/share/doc/HTML/en/yammi/index-4.html
	$(mkinstalldirs) $(KDEDIR)/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-5.html $(KDEDIR)/share/doc/HTML/en/yammi/index-5.html
	$(mkinstalldirs) $(KDEDIR)/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-6.html $(KDEDIR)/share/doc/HTML/en/yammi/index-6.html
	$(mkinstalldirs) $(KDEDIR)/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index.html $(KDEDIR)/share/doc/HTML/en/yammi/index.html

uninstall-local:
	-rm -f $(KDEDIR)/share/doc/HTML/en/yammi/index-1.html
	-rm -f $(KDEDIR)/share/doc/HTML/en/yammi/index-2.html
	-rm -f $(KDEDIR)/share/doc/HTML/en/yammi/index-3.html
	-rm -f $(KDEDIR)/share/doc/HTML/en/yammi/index-4.html
	-rm -f $(KDEDIR)/share/doc/HTML/en/yammi/index-5.html
	-rm -f $(KDEDIR)/share/doc/HTML/en/yammi/index-6.html
	-rm -f $(KDEDIR)/share/doc/HTML/en/yammi/index.html

####### kdevelop will overwrite this part!!! (end)############
