####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.html logotp3.png index.sgml 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-1.html $(kde_htmldir)/en/yammi/index-1.html
	$(mkinstalldirs) $(kde_htmldir)/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-2.html $(kde_htmldir)/en/yammi/index-2.html
	$(mkinstalldirs) $(kde_htmldir)/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-3.html $(kde_htmldir)/en/yammi/index-3.html
	$(mkinstalldirs) $(kde_htmldir)/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-4.html $(kde_htmldir)/en/yammi/index-4.html
	$(mkinstalldirs) $(kde_htmldir)/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-5.html $(kde_htmldir)/en/yammi/index-5.html
	$(mkinstalldirs) $(kde_htmldir)/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-6.html $(kde_htmldir)/en/yammi/index-6.html
	$(mkinstalldirs) $(kde_htmldir)/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index.html $(kde_htmldir)/en/yammi/index.html

uninstall-local:
	-rm -f $(kde_htmldir)/en/yammi/index-1.html
	-rm -f $(kde_htmldir)/en/yammi/index-2.html
	-rm -f $(kde_htmldir)/en/yammi/index-3.html
	-rm -f $(kde_htmldir)/en/yammi/index-4.html
	-rm -f $(kde_htmldir)/en/yammi/index-5.html
	-rm -f $(kde_htmldir)/en/yammi/index-6.html
	-rm -f $(kde_htmldir)/en/yammi/index.html

####### kdevelop will overwrite this part!!! (end)############
