####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.sgml index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index-7.html index.html 

install-data-local:
	$(mkinstalldirs) /opt/kde2/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-1.html /opt/kde2/share/doc/HTML/en/yammi/index-1.html
	$(mkinstalldirs) /opt/kde2/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-2.html /opt/kde2/share/doc/HTML/en/yammi/index-2.html
	$(mkinstalldirs) /opt/kde2/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-3.html /opt/kde2/share/doc/HTML/en/yammi/index-3.html
	$(mkinstalldirs) /opt/kde2/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-4.html /opt/kde2/share/doc/HTML/en/yammi/index-4.html
	$(mkinstalldirs) /opt/kde2/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-5.html /opt/kde2/share/doc/HTML/en/yammi/index-5.html
	$(mkinstalldirs) /opt/kde2/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-6.html /opt/kde2/share/doc/HTML/en/yammi/index-6.html
	$(mkinstalldirs) /opt/kde2/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index-7.html /opt/kde2/share/doc/HTML/en/yammi/index-7.html
	$(mkinstalldirs) /opt/kde2/share/doc/HTML/en/yammi/
	$(INSTALL_DATA) $(srcdir)/index.html /opt/kde2/share/doc/HTML/en/yammi/index.html

uninstall-local:
	-rm -f /opt/kde2/share/doc/HTML/en/yammi/index-1.html
	-rm -f /opt/kde2/share/doc/HTML/en/yammi/index-2.html
	-rm -f /opt/kde2/share/doc/HTML/en/yammi/index-3.html
	-rm -f /opt/kde2/share/doc/HTML/en/yammi/index-4.html
	-rm -f /opt/kde2/share/doc/HTML/en/yammi/index-5.html
	-rm -f /opt/kde2/share/doc/HTML/en/yammi/index-6.html
	-rm -f /opt/kde2/share/doc/HTML/en/yammi/index-7.html
	-rm -f /opt/kde2/share/doc/HTML/en/yammi/index.html

####### kdevelop will overwrite this part!!! (end)############
